--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
 <body>
     <script src="js/small_display.js"></script>
 
+    <section class="About">
+        <h1>About me</h1>
+        <p>text</p>
+    </section>
+
+    <section class="portfolio-catagory">
+         <h1>catagory title</h1>
+            <div>
+                <img>
+                <h2>meow</h2>
+                <p>smaller meow</p>
+            </div>
+    </section>
+
+    <footer>
+    </footer>
 </body>
 </html>
