--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <img>
                 <h2>meow</h2>
                 <p>smaller meow</p>
+                <h1>larger bark</h1>
             </div>
     </section>
 
