got tailwind working

--- a/index.html
+++ b/index.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annalicia Salazar</title>
+    <link href="/src/output.css" rel="stylesheet">
 </head>
-<body>
+
+<body class="bg-[#FDF7F0]">
     <script src="js/small_display.js"></script>
 
-    <section class="About">
+    <section class="">
         <h1>About me</h1>
         <p>text</p>
     </section>
 
-    <section class="portfolio-catagory">
-         <h1>catagory title</h1>
+    <section class="">
+        <h1>catagory title</h1>
+        <div class="grid grid-cols-3 gap-4">
             <div>
                 <img>
                 <h2>meow</h2>
                 <p>smaller meow</p>
                 <h1>larger bark</h1>
             </div>
+            <div>
+                <img>
+                <h2>meow</h2>
+                <p>smaller meow</p>
+                <h1>larger bark</h1>
+            </div>
+            <div>
+                <img>
+                <h2>meow</h2>
+                <p>smaller meow</p>
+                <h1>larger bark</h1>
+            </div>
+            <div>
+                <img>
+                <h2>meow</h2>
+                <p>smaller meow</p>
+                <h1>larger bark</h1>
+            </div>
+            <div>
+                <img>
+                <h2>meow</h2>
+                <p>smaller meow</p>
+                <h1>larger bark</h1>
+            </div>
+        </div>
     </section>
 
     <footer>
     </footer>
 </body>
+
 </html>
