--- a/index.html
+++ b/index.html
@@ -5,20 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annalicia Salazar</title>
 </head>
+
 <body>
     <script src="js/small_display.js"></script>
 
     <section class="About">
-        <h1>About me</h1>
-        <p>text</p>
+        <img src="/icons/personal logo.png">
+        <div>
+            <h1>Welcome!<br>I'm Annalicia Salazar</h1>
+            <p>Graphic & Web Designer | Illustrator | Visual Arts Student</p>
+            <a href="/about-me.html" class="about-me"> About me</a>
+        </div>
     </section>
 
     <section class="portfolio-catagory">
-         <h1>catagory title</h1>
+         <h1>Illustration</h1>
+            <div>
+                <div class="img-container">
+                <img>
+                </div>
+                <h2>Project Title</h2>
+                <p>Project desc</p>
+                <h1>larger bark</h1>
+            </div>
+    </section>
+
+    <section class="portfolio-catagory">
+         <h1>Design</h1>
+            <div>
+                <div class="img-container">
+                <img>
+                </div>
+                <h2>Project Title</h2>
+                <p>Project desc</p>
+                <h1>larger bark</h1>
+            </div>
+    </section>
+
+    <section class="portfolio-catagory">
+         <h1>Video</h1>
             <div>
                 <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
+                <h2>Project Title</h2>
+                <p>Project desc</p>
                 <h1>larger bark</h1>
             </div>
     </section>
