made basic generator function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-[#FDF7F0]">
-    <script src="js/small_display.js"></script>
+    <script src="js/generate_illustration.js"></script>
 
     <section class="">
         <h1>About me</h1>
@@ -18,37 +18,7 @@
 
     <section class="">
         <h1>catagory title</h1>
-        <div class="grid grid-cols-3 gap-4">
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
-                <h1>larger bark</h1>
-            </div>
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
-                <h1>larger bark</h1>
-            </div>
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
-                <h1>larger bark</h1>
-            </div>
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
-                <h1>larger bark</h1>
-            </div>
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
-                <h1>larger bark</h1>
-            </div>
+        <div id="illustration-container" class="grid grid-cols-3 gap-4">
         </div>
     </section>
 
