i did my best w/ tailwind :(

--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
     <link href="/src/output.css" rel="stylesheet">
 </head>
 
-<body class="bg-[#FDF7F0]">
+<body class="bg-[#FDF7F0] flex flex-col items-center">
     <script src="js/small_display.js"></script>
 
-    <section class="">
-        <h1>About me</h1>
-        <p>text</p>
-    </section>
+   
+        <div class="max-w-md mx-auto">
+        <img>
+        <div>
+            <h1 class="text-8xl font-bold">Welcome<br>I'm Annalicia Salazar</h1>
+            <p class="text-4xl"> Graphic & Web Designer | Illustrator | Visual Arts Student</p>
+        </div>
+        </div>
+ 
 
     <section class="">
-        <h1>catagory title</h1>
+        <h1 class="p-10 text-8xl">Illustration</h1>
         <div class="grid grid-cols-3 gap-4">
-            <div>
-                <img>
-                <h2>meow</h2>
-                <p>smaller meow</p>
+            <div class="p-2">
+                <img src="/assets/illustration/overgrowth-of-blame.jpg" class="rounded-4xl">
+                <h2 class="text-6xl">Project Title</h2>
+                <p class="text-4xl">Project Desc</p>
                 <h1>larger bark</h1>
             </div>
             <div>
-                <img>
+                <img src="/assets/illustration/pools-of-the-past.jpg" class="rounded-4xl">
                 <h2>meow</h2>
                 <p>smaller meow</p>
                 <h1>larger bark</h1>
