--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link href="/src/output.css" rel="stylesheet">
 </head>
 
-<body class="bg-[#FDF7F0] flex flex-col items-center">
+<body class="bg-[#FDF7F0] flex-col ">
     <script src="js/small_display.js"></script>
 
-   
+
+    <section class="">
         <div class="max-w-md mx-auto">
-        <img>
-        <div>
-            <h1 class="text-8xl font-bold">Welcome<br>I'm Annalicia Salazar</h1>
-            <p class="text-4xl"> Graphic & Web Designer | Illustrator | Visual Arts Student</p>
+            <img>
+            <div>
+                <h1 class="text-8xl font-bold">Welcome<br>I'm Annalicia Salazar</h1>
+                <p class="text-4xl"> Graphic & Web Designer | Illustrator | Visual Arts Student</p>
+            </div>
         </div>
-        </div>
- 
+    </section>
+
 
     <section class="">
         <h1 class="p-10 text-8xl">Illustration</h1>
